WPF single file distribution.

--- a/WPF/WpfCore/WpfCore.csproj
+++ b/WPF/WpfCore/WpfCore.csproj
@@ -4,6 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <!--<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishTrimmed>true</PublishTrimmed>-->
   </PropertyGroup>
 
 </Project>
