--- a/azure/DemoWeb/appsettings.json
+++ b/azure/DemoWeb/appsettings.json
@@ -9,9 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //    "DemoWebContext": "Server=(localdb)\\mssqllocaldb;Database=DemoWebContext-1b92898e-681b-4eb7-bf23-9f84ff1f89ba;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DemoWebContext": "Server=tcp:demowebdbserver.database.windows.net,1433;Initial Catalog=DemoWeb_db;Persist Security Info=False;User ID=demoweb_admin;Password=B@ref33t;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DemoWebContext": "Server=tcp:demowebdbserver.database.windows.net,1433;Initial Catalog=DemoWeb_db;Persist Security Info=False;User ID=__DBUSER__;Password=__DBPWD__;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "d066c64a-80da-41c8-ad0b-22ea38bd8e18"
+    "InstrumentationKey": "__APPINSIGHTSKEY__"
   }
 }
